# slashrun

./: .gitignore  README.md  SCENARIO_CREATION_GUIDE.md  SCENARIO_WALKTHROUGHS.md  docker-compose.yml  main.py  pyproject.toml  run_tests.py  run_tests.sh  simulation_state.md
.clinerules/: 01-frontend-patterns.md  02-pydantic-patterns.md  03-auth-patterns.md  04-langgraph-prebuilt.md  04-routing-patterns.md  05-langgraph-context.md  06-langgraph-storage.md  07-langgraph-integration.md
backend/: Dockerfile.backend
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  simulation.py  (+1 more)
backend/tests/: __init__.py  conftest.py  conftest_integration.py  test_api.py  test_api_integration.py  test_database.py  test_scenarios_complex.py  test_scenarios_medium.py  test_scenarios_simple.py  test_simulation_core.py
db/models/: __init__.py  scenario.py  state.py  user.py
docs/: README.md  SCENARIO_TESTING_SUMMARY.md  TESTING.md  implementation_plan.md
frontend/: .eslintrc.json  .gitignore  .prettierignore  dashboard.html  index.html  login.html  middleware.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
frontend/.storybook/: main.ts  preview.ts
frontend/__tests__/: LoginForm.test.tsx  Panel.test.tsx  SimulationProvider.test.tsx  WorkspaceShell.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/css/: main.css
frontend/docs/: PHASE-0-README.md  PHASE-1-README.md
frontend/hooks/: useActiveScenario.ts  useAuthRedirect.ts  useScenarioList.ts
frontend/js/: api.js  auth.js  main.js  websocket.js
frontend/styles/: layout.css  layout.module.css  tokens.css  typography.css
frontend/types/: simulation.ts
frontend_plan/: CROSS_PHASE_ARCHITECTURE.md  FRONTEND_IMPLEMENTATION_PLAN.md
frontend_plan/phases/: PHASE-0-README.md  PHASE-1-README.md  PHASE-2-README.md  PHASE-3-README.md  PHASE-4-README.md  PHASE-5-README.md  PHASE-6-README.md  PHASE-7-README.md  PHASE-8-README.md  PHASE-9-README.md
scenarios/: analyzer.py  api_audit_capture.py  runner.py
scenarios/reports/: audit_global_financial_crisis_20250915_183416.json  audit_great_power_conflict_20250915_183417.json  audit_inflation_target_test_20250915_183348.json  audit_policy_shock_test_20250915_183347.json  audit_single_country_basic_20250915_183347.json  detailed_analysis_global_financial_crisis_20250915_183800.json  (+22 more)
(+86 files in other folders)
